syntax = "proto3";

option go_package = "marketplace/pkg/proto/events";  

package events;

import "google/protobuf/timestamp.proto"; // Timestamp için
import "common.proto";
// MessageType ve ServiceType enum'ları
enum MessageType {
    UNKNOWN_MESSAGE_TYPE = 0;
    USER_CREATED = 1;
    USER_DELETED  = 2;
    USER_UPDATED  = 3;
    SELLER_APPROVED   = 4;
    SELLER_REJECTED   = 5;
    PRODUCT_PRICE_UPDATED = 6;
    PRODUCT_STOCK_ZERO = 7;
    PRODUCT_DELETED = 8;
    ORDER_CREATED = 9;
    ORDER_UPDATED = 10;
    ORDER_DELETED = 11;
    PAYMENT_CREATED = 12;
    PAYMENT_FAILED = 13;
    PAYMENT_SUCCESSFUL = 14;
    USER_ACTIVATION_EMAIL = 15;
    USER_FORGOT_PASSWORD = 16;
    // Diğer mesaj tiplerini buraya ekleyin
}

enum ServiceType {
    UNKNOWN_SERVICE = 0;
    API_GATEWAY_SERVICE = 1;
    USER_SERVICE = 2;
    SELLER_SERVICE = 3;
    PRODUCT_SERVICE = 4;
    ORDER_SERVICE = 5;
    RETRY_SERVICE = 6;
    BASKET_SERVICE = 7;
    PAYMENT_SERVICE = 8;
    NOTIFICATION_SERVICE = 9;
    // Diğer servis tiplerini buraya ekleyin
}

message Message {
    string id = 1;
    MessageType type = 2;
    google.protobuf.Timestamp created = 3;
    ServiceType from_service = 4;
    repeated ServiceType to_services = 5; // Birden fazla hedef servis
    int32 priority = 6;
    map<string, string> headers = 7; // Headers for metadata
    bool critical = 8;
    int32 retry_count = 9;
    google.protobuf.Timestamp retry_after = 10;
    string last_error = 11;

    // Payload için bir oneof yapısı kullanabiliriz
    oneof payload {
        UserCreatedData user_created_data = 12;
        SellerApprovedData seller_approved_data = 13;
        SellerRejectedData seller_rejected_data = 14;
        ProductPriceUpdatedData product_price_updated_data = 15;
        ProductStockZeroData product_stock_zero_data = 16;
        ProductDeletedData product_deleted_data = 17;
        OrderCreatedData order_created_data = 18;
        PaymentSuccessfulData payment_successful_data = 19;
        PaymentFailedData payment_failed_data = 20;
        UserActivationEmailData user_activation_email_data = 21;
        UserForgotPasswordData user_forgot_password_data = 22;
        // Diğer olay tipleri için buraya payload'lar eklenecek
       

    }
}

message UserCreatedData {
    string user_id = 1;
    string username = 2;
    string email = 3;
    // Diğer ilgili kullanıcı bilgileri
}
message UserActivationEmailData {
    string username = 1;
    string email = 2;
    string activation_code = 3;
    string activation_id = 4;

}
message SellerApprovedData {
    string seller_id = 1;
    string approved_by = 2;
    string user_id = 3;

}
message SellerRejectedData {
    string seller_id = 1;
    string rejected_by = 2;
    string reason = 3;
    string user_id = 4;

}
message ProductPriceUpdatedData {
    string product_id = 1;
    float price = 2;
}
message ProductStockZeroData {
    string product_id = 1;
}
message ProductDeletedData {
    string product_id = 1;
}

message OrderCreatedData {
    string order_id = 1;
    string user_id = 2;
    double total_price = 3;
    
    repeated common.OrderItemData items = 4; 
}



message PaymentSuccessfulData {
    string order_id = 1;
    string user_id = 2;
    string stripe_session_id = 3;
    double amount = 4;
}

message PaymentFailedData {
    string order_id = 1;
    string user_id = 2;
    string error_message = 3;
    string failure_code = 4;
}
message UserForgotPasswordData {
    string user_id = 1;
    string token = 2;
}



// protoc komutu:
///protoc -I pkg/proto ` --go_out=. --go_opt=module=marketplace ` --go-grpc_out=. --go-grpc_opt=module=marketplace ` pkg/proto/events.proto
// protoc --go_out=. --go_opt=paths=source_relative --go-vtproto_out=. --go-vtproto_opt=paths=source_relative events.proto
// protoc --go_out=events --go_opt=paths=source_relative events.proto
